--- a/Utils.csproj
+++ b/Utils.csproj
@@ -45,6 +45,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Events\DynamicEventArgs.cs" />
     <Compile Include="Mail\Mailer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Text\Comparison.cs" />
