--- a/Utils.csproj
+++ b/Utils.csproj
@@ -51,7 +51,7 @@
     <Compile Include="Text\Comparison.cs" />
     <Compile Include="Text\SpecialChars.cs" />
     <Compile Include="Time\Timer.cs" />
-    <Compile Include="WPF\Window.cs" />
+    <Compile Include="WPF\WindowExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
