--- a/Utils.csproj
+++ b/Utils.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Events\DynamicEventArgs.cs" />
     <Compile Include="Mail\Mailer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Misc\TupleExtensions.cs" />
     <Compile Include="Text\Comparison.cs" />
     <Compile Include="Text\StringOperations.cs" />
     <Compile Include="Time\Timer.cs" />
