--- a/UtilsUnitTests/UtilsUnitTests.csproj
+++ b/UtilsUnitTests/UtilsUnitTests.csproj
@@ -36,6 +36,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -51,16 +52,22 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Events\UnitTest1.cs" />
-    <Compile Include="Mail\UnitTest1.cs" />
-    <Compile Include="Misc\UnitTest1.cs" />
-    <Compile Include="Text\UnitTest1.cs" />
-    <Compile Include="Time\UnitTest1.cs" />
+    <Compile Include="Events\EventsTests.cs" />
+    <Compile Include="Mail\MailerTests.cs" />
+    <Compile Include="Misc\TupleExtensionsTests.cs" />
+    <Compile Include="Text\StringOperationsTests.cs" />
+    <Compile Include="Text\ComparisonTests.cs" />
+    <Compile Include="Time\TimerTests.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WPF\UnitTest1.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Utils.csproj">
+      <Project>{95171576-382e-470a-b2a6-bf9d270f35a7}</Project>
+      <Name>Utils</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
