--- a/UtilsUnitTests/UtilsUnitTests.csproj
+++ b/UtilsUnitTests/UtilsUnitTests.csproj
@@ -58,9 +58,8 @@
     <Compile Include="Text\StringOperationsTests.cs" />
     <Compile Include="Text\ComparisonTests.cs" />
     <Compile Include="Time\TimerTests.cs" />
-    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WPF\UnitTest1.cs" />
+    <Compile Include="WPF\WindowExtensionsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Utils.csproj">
