--- a/Utils.csproj
+++ b/Utils.csproj
@@ -59,6 +59,12 @@
     <Compile Include="WPF\FilePicker.xaml.cs">
       <DependentUpon>FilePicker.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WPF\Resources\Lang\LocalizedStrings.cs" />
+    <Compile Include="WPF\Resources\Lang\Strings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
     <Compile Include="WPF\WindowExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -66,6 +72,13 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="WPF\Resources\Lang\Strings.fr-FR.resx" />
+    <EmbeddedResource Include="WPF\Resources\Lang\Strings.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
