--- a/Utils.csproj
+++ b/Utils.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Events\DynamicEventArgs.cs" />
     <Compile Include="Mail\Mailer.cs" />
+    <Compile Include="Misc\Misc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Misc\TupleExtensions.cs" />
     <Compile Include="Text\Comparison.cs" />
