Yet anothert try at including xml doc

--- a/Utils.csproj
+++ b/Utils.csproj
@@ -31,7 +31,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
-    <DocumentationFile>bin\Release\Utils.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\Utils.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
