--- a/Utils.csproj
+++ b/Utils.csproj
@@ -66,6 +66,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\EnumExtensions.cs" />
     <Compile Include="Events\DynamicEventArgs.cs" />
     <Compile Include="Events\GenericEventArgs.cs" />
     <Compile Include="Mail\Mailer.cs" />
