--- a/Utils.csproj
+++ b/Utils.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Events\GenericEventArgs.cs" />
     <Compile Include="Mail\Mailer.cs" />
     <Compile Include="Misc\Misc.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Misc\TupleExtensions.cs" />
     <Compile Include="Reflection\ObjectExtensions.cs" />
